tests/baselines/reference/non-octal-like-invalid-09n.errors.txt
non-octal-like-invalid-09n.ts(27,1): error TS1489: Decimals with leading zeros are not allowed.
non-octal-like-invalid-09n.ts(27,3): error TS1005: ';' expected.
non-octal-like-invalid-09n.ts(27,3): error TS2304: Cannot find name 'n'.


==== non-octal-like-invalid-09n.ts (3 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteral
    description: >
      The BigInt suffix is disallowed in NonOctalDecimalIntegerLiteral
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
    
      https://github.com/tc39/proposal-bigint/issues/208
    
      NumericLiteral ::
        DecimalBigIntegerLiteral
    
      DecimalBigIntegerLiteral ::
        0 BigIntLiteralSuffix
        NonZeroDigit DecimalDigits_opt BigIntLiteralSuffix
    features: [BigInt]
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    09n;
    ~~
!!! error TS1489: Decimals with leading zeros are not allowed.
      ~
!!! error TS1005: ';' expected.
      ~
!!! error TS2304: Cannot find name 'n'.
    